# Helios-Sentinel

./: .gitignore  CMakeLists.txt  README.md  Sentinel.qmlproject  ViscommTester.files  ViscommTester.qmlproject  ViscommTester.qmlproject.qtds  ViscommTester.qmlproject.qtds.113606f  main.cpp  qmlmodules  translations.db-shm
content/: .qmlls.ini  App.qml  AuxBmsView.qml  B3View.qml  BatteryFaultsView.qml  BatteryView.qml  BytePreview.qml  CMakeLists.txt  ContactorsView.qml  DriverControlsView.qml  FlagBox.qml  FloatSpinBox.qml  IntSpinBox.qml  KeyMotorElysiaView.qml  KeyMotorView.qml  LightsView.qml  MbmsView.qml  Motor0DetailsView.qml  Motor1DetailsView.qml  MotorDetailsElysia.qml  MotorDetailsView.qml  MotorFaults.qml  MotorFaultsView.qml  MpptView.qml  ProximitySensorsView.qml  Screen01.ui.qml  Setting.qml  TabBtn.qml  TelemetryView.qml  Window.qml
content/Components/: FloatSpinBox.qml  IntSpinBox.qml
content/Elysia/: AuxBmsElysiaView.qml  BatteryElysiaView.qml  BatteryFaultsElysiaView.qml  DriverControlsElysiaView.qml  KeyMotorElysiaView.qml  LightsElysiaView.qml  MotorDetailsElysia.qml  MotorFaultsElysia.qml  MpptElysiaView.qml
content/PacketViews/: B3View.qml  BatteryFaultsView.qml  BatteryView.qml  ContactorsView.qml  KeyMotorView.qml  MbmsView.qml  MotorDetailsView.qml  MpptView.qml  ProximitySensorsView.qml  TelemetryView.qml
imports/: CMakeLists.txt
imports/SentinelModule/: CMakeLists.txt  qmldir
imports/SentinelModule/designer/: plugin.metainfo
imports/ViscommTester/: CMakeLists.txt  qmldir
imports/ViscommTester/designer/: plugin.metainfo
src/: AuxBms.cpp  AuxBms.h  B3.cpp  B3.h  Battery.cpp  Battery.h  BatteryFaults.cpp  BatteryFaults.h  DriverControls.cpp  DriverControls.h  KeyMotor.cpp  KeyMotor.h  KeyMotorElysia.cpp  KeyMotorElysia.h  Lightscontrol.cpp  Lightscontrol.h  Mbms.cpp  Mbms.h  Motor0Details.cpp  Motor0Details.h  Motor1Details.cpp  Motor1Details.h  MotorDetails.cpp  MotorDetails.h  MotorDetailsElysia.cpp  MotorDetailsElysia.h  MotorFaults.cpp  MotorFaults.h  Mppt.cpp  Mppt.h  PropertyDefinition.h  ProximitySensors.cpp  ProximitySensors.h  SerialPortForwarder.cpp  Setting.cpp  Setting.h  Telemetry.cpp  Telemetry.h  import_qml_plugins.h  lights.cpp  (+6 more)
src/Elysia/: AuxBmsElysia.cpp  AuxBmsElysia.h  DriverControlsElysia.cpp  DriverControlsElysia.h  KeyMotorElysia.cpp  KeyMotorElysia.h  LightsElysia.cpp  LightsElysia.h  MotorDetailsElysia.cpp  MotorDetailsElysia.h  MotorFaultsElysia.cpp  MotorFaultsElysia.h  MpptElysia.cpp  MpptElysia.h
src/Packets/: B3.cpp  B3.h  Battery.cpp  Battery.h  BatteryFaults.cpp  BatteryFaults.h  Contactors.cpp  Contactors.h  IPacket.h  KeyMotor.cpp  KeyMotor.h  Mbms.cpp  Mbms.h  MotorDetails.cpp  MotorDetails.h  Mppt.cpp  Mppt.h  OLD_B3.cpp  OLD_B3.h  OLD_Battery.h  OLD_BatteryFaults.h  OLD_KeyMotor.cpp  OLD_KeyMotor.h  OLD_Mbms.cpp  OLD_MotorDetails.h  OLD_Mppt.h  OLD_Telemetry.cpp  ProximitySensors.cpp  ProximitySensors.h  Telemetry.cpp  Telemetry.h
src/Packets/Elysia/: AuxBmsElysia.h  BatteryElysia.cpp  BatteryElysia.h  BatteryFaultsElysia.cpp  BatteryFaultsElysia.h  DriverControlsElysia.cpp  DriverControlsElysia.h  KeyMotorElysia.cpp  KeyMotorElysia.h  LightsElysia.cpp  LightsElysia.h  MotorDetailsElysia.h  MotorFaultsElysia.cpp  MotorFaultsElysia.h
src/Packets/Helios/: B3.cpp  B3.h  Battery.h  BatteryFaults.cpp  BatteryFaults.h  KeyMotor.h  Mbms.h  MotorDetails.h  Mppt.cpp  Mppt.h  ProximitySensors.cpp  ProximitySensors.h  Telemetry.h
src/Util/: PropertyDefinitions.h
src/Utils/: SerialPortForwarder.cpp  SerialPortForwarder.h  Setting.cpp  Setting.h  setting.cpp  setting.h
